# Qt-Advanced-Docking-System

./: CMakeLists.txt  meson.build  meson_options.txt
demo/: meson.build
examples/: meson.build
examples/centralwidget/: meson.build
examples/deleteonclose/: meson.build
examples/dockindock/: meson.build
examples/emptydockarea/: meson.build
examples/hideshow/: meson.build
examples/sidebar/: meson.build
examples/simple/: meson.build
shiboken/: CMakeLists.txt  bindings.h  bindings.xml
src/: meson.build
